# madrigal

./: Cargo.toml  README.md
demo/: Cargo.toml
demo-common/: Cargo.toml
demo-ebpf/: Cargo.toml
demo-ebpf/src/: main.rs
demo/src/: main.rs
